--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@clsy/tailwind-config": "workspace:*",
     "@clsy/tsconfig": "workspace:*",
     "@clsy/turbo-run": "workspace:*",
+    "@clsy/vite-config": "workspace:*",
     "@clsy/vsh": "workspace:*",
     "@types/node": "catalog:",
     "@vitejs/plugin-vue": "catalog:",
@@ -41,6 +42,7 @@
     "cross-env": "catalog:",
     "husky": "catalog:",
     "lint-staged": "catalog:",
+    "tailwindcss": "catalog:",
     "turbo": "catalog:",
     "typescript": "catalog:",
     "unbuild": "catalog:",
