--- a/packages/flow-chart/package.json
+++ b/packages/flow-chart/package.json
@@ -11,17 +11,20 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/main.umd.js",
-  "module": "./dist/main.js",
-  "types": "./dist/main.d.ts",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/main.js",
-      "require": "./dist/main.umd.cjs"
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
     }
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@clsy-core/design": "workspace:*",
+    "@logicflow/core": "^2.0.10",
+    "@logicflow/extension": "^2.0.14",
+    "vue": "catalog:"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "catalog:",
