--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - internal/*
   - internal/lint-configs/*
   - packages/*
+  - packages/@core/base/*
   - scripts/*
   - apps/*
 catalog:
@@ -90,3 +91,26 @@ catalog:
   vue: ^3.5.13
   vue-eslint-parser: ^9.4.3
   vue-tsc: ^2.2.0
+  dotenv: ^16.4.5
+  rollup: ^4.24.1
+  rollup-plugin-visualizer: ^5.12.0
+  sass: 1.79.5
+  vite-plugin-compression: ^0.5.1
+  vite-plugin-html: ^3.2.2
+  vite-plugin-lazy-import: ^1.0.7
+  vite-plugin-lib-inject-css: ^2.1.1
+  vite-plugin-pwa: ^0.20.5
+  vite-plugin-vue-devtools: ^7.5.4
+  resolve.exports: ^2.0.2
+  nitropack: ^2.9.7
+  '@types/html-minifier-terser': ^7.0.2
+  html-minifier-terser: ^7.2.0
+  get-port: ^7.1.0
+  cheerio: 1.0.0
+  '@types/archiver': ^6.0.3
+  archiver: ^7.0.1
+  '@jspm/generator': ^2.4.1
+  '@intlify/unplugin-vue-i18n': ^5.2.0
+  '@pnpm/workspace.read-manifest': ^2.2.1
+  '@vitejs/plugin-vue-jsx': ^4.0.1
+  '@intlify/core-base': ^10.0.4
