feat: ✨ 支持图元拖拽

--- a/packages/flow-chart/tsconfig.json
+++ b/packages/flow-chart/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "@clsy/tsconfig/web.json",
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  "extends": "@clsy/tsconfig/web-app.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "#/*": ["./src/*"]
+    }
+  },
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "types/**/*.d.ts"]
 }
