--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
@@ -26,3 +24,6 @@ dist-ssr
 tsconfig.tsbuildinfo
 .eslintcache
 .stylelintcache
+
+# **/**/auto-import.d.ts
+# **/**/components.d.ts
