--- a/packages/flow-chart/package.json
+++ b/packages/flow-chart/package.json
@@ -4,32 +4,26 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "pnpm vite --mode development",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
-    }
-  },
   "dependencies": {
     "@clsy-core/design": "workspace:*",
-    "@logicflow/core": "^2.0.10",
-    "@logicflow/extension": "^2.0.14",
+    "@clsy/utils": "workspace:*",
+    "@logicflow/core": "catalog:",
+    "@logicflow/extension": "catalog:",
+    "element-plus": "catalog:",
     "vue": "catalog:"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "catalog:",
     "@vue/tsconfig": "catalog:",
     "typescript": "catalog:",
+    "unplugin-auto-import": "catalog:",
+    "unplugin-element-plus": "catalog:",
+    "unplugin-icons": "catalog:",
+    "unplugin-vue-components": "catalog:",
     "vite": "catalog:",
     "vite-plugin-dts": "catalog:",
     "vue-tsc": "catalog:"
