--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -102,6 +102,7 @@ catalog:
   turbo: ^2.2.3
   typescript: ~5.6.2
   unbuild: ^2.0.0
+  unplugin-element-plus: ^0.8.0
   vite: ^5.4.10
   vite-plugin-compression: ^0.5.1
   vite-plugin-dts: ^4.5.0
@@ -113,3 +114,9 @@ catalog:
   vue: ^3.5.13
   vue-eslint-parser: ^9.4.3
   vue-tsc: ^2.2.0
+  'unplugin-auto-import': '^0.18.3'
+  'unplugin-vue-components': '^0.27.4'
+  'unplugin-icons': '^0.19.3'
+  'element-plus': '^2.9.3'
+  '@logicflow/core': '^2.0.10'
+  '@logicflow/extension': '^2.0.14'
