--- a/packages/flow-chart/package.json
+++ b/packages/flow-chart/package.json
@@ -8,15 +8,21 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
+  "imports": {
+    "#/*": "./src/*"
+  },
   "dependencies": {
     "@clsy-core/design": "workspace:*",
     "@clsy/utils": "workspace:*",
+    "@element-plus/icons-vue": "catalog:",
     "@logicflow/core": "catalog:",
     "@logicflow/extension": "catalog:",
     "element-plus": "catalog:",
+    "lodash-es": "catalog:",
     "vue": "catalog:"
   },
   "devDependencies": {
+    "@types/lodash-es": "catalog:",
     "@vitejs/plugin-vue": "catalog:",
     "@vue/tsconfig": "catalog:",
     "typescript": "catalog:",
