perf: ⚡ 优化代码逻辑、文件结构、性能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -225,6 +225,7 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "[ignore]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
-  }
+  },
+  "cSpell.words": ["logicflow"]
   // "oxc.enable": false
 }
