--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,17 +1,11 @@
 ---
-packages:
-  - internal/*
-  - internal/lint-configs/*
-  - packages/*
-  - packages/@core/base/*
-  - scripts/*
-  - apps/*
 catalog:
   '@changesets/cli': ^2.27.9
   '@changesets/git': ^3.0.1
   '@clack/prompts': ^0.7.0
   '@commitlint/cli': ^19.5.0
   '@commitlint/config-conventional': ^19.5.0
+  '@element-plus/icons-vue': ^2.3.1
   '@eslint/js': ^9.13.0
   '@iconify/json': ^2.2.264
   '@iconify/tailwind': ^1.1.3
@@ -19,6 +13,8 @@ catalog:
   '@intlify/core-base': ^10.0.4
   '@intlify/unplugin-vue-i18n': ^5.2.0
   '@jspm/generator': ^2.4.1
+  '@logicflow/core': ^2.0.10
+  '@logicflow/extension': ^2.0.14
   '@manypkg/get-packages': ^2.2.2
   '@pnpm/workspace.read-manifest': ^2.2.1
   '@stylistic/stylelint-plugin': ^3.1.1
@@ -44,6 +40,8 @@ catalog:
   dayjs: ^1.11.13
   depcheck: ^1.4.7
   dotenv: ^16.4.5
+  element-plus: ^2.9.3
+  es-toolkit: ^1.32.0
   eslint: ^9.13.0
   eslint-config-turbo: ^2.2.3
   eslint-plugin-command: ^0.2.6
@@ -102,7 +100,10 @@ catalog:
   turbo: ^2.2.3
   typescript: ~5.6.2
   unbuild: ^2.0.0
+  unplugin-auto-import: ^0.18.3
   unplugin-element-plus: ^0.8.0
+  unplugin-icons: ^0.19.3
+  unplugin-vue-components: ^0.27.4
   vite: ^5.4.10
   vite-plugin-compression: ^0.5.1
   vite-plugin-dts: ^4.5.0
@@ -114,12 +115,10 @@ catalog:
   vue: ^3.5.13
   vue-eslint-parser: ^9.4.3
   vue-tsc: ^2.2.0
-  unplugin-auto-import: ^0.18.3
-  unplugin-vue-components: ^0.27.4
-  unplugin-icons: ^0.19.3
-  element-plus: ^2.9.3
-  '@logicflow/core': ^2.0.10
-  '@logicflow/extension': ^2.0.14
-  '@element-plus/icons-vue': ^2.3.1
-  lodash-es: ^4.17.21
-  '@types/lodash-es': ^4.17.12
+packages:
+  - internal/*
+  - internal/lint-configs/*
+  - packages/*
+  - packages/@core/base/*
+  - scripts/*
+  - apps/*
