--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -28,6 +28,7 @@ catalog:
   '@vitejs/plugin-vue': ^5.2.1
   '@vitejs/plugin-vue-jsx': ^4.0.1
   '@vue/tsconfig': ^0.7.0
+  '@vueuse/core': ^12.5.0
   archiver: ^7.0.1
   autoprefixer: ^10.4.20
   cac: ^6.7.14
@@ -115,6 +116,7 @@ catalog:
   vue: ^3.5.13
   vue-eslint-parser: ^9.4.3
   vue-tsc: ^2.2.0
+  'decimal.js': ^10.5.0
 packages:
   - internal/*
   - internal/lint-configs/*
