--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,6 +15,7 @@ catalog:
   '@jspm/generator': ^2.4.1
   '@logicflow/core': ^2.0.10
   '@logicflow/extension': ^2.0.14
+  '@logicflow/vue-node-registry': ^1.0.12
   '@manypkg/get-packages': ^2.2.2
   '@pnpm/workspace.read-manifest': ^2.2.1
   '@stylistic/stylelint-plugin': ^3.1.1
