--- a/packages/flow-chart/package.json
+++ b/packages/flow-chart/package.json
@@ -19,12 +19,14 @@
     "@logicflow/extension": "catalog:",
     "@logicflow/vue-node-registry": "catalog:",
     "@tinymce/tinymce-vue": "6.0.1",
+    "@types/file-saver": "^2.0.7",
     "@vueuse/core": "catalog:",
     "@wangeditor-next/editor": "^5.6.34",
     "@wangeditor-next/editor-for-vue": "^5.1.14",
     "decimal.js": "catalog:",
     "element-plus": "catalog:",
     "es-toolkit": "catalog:",
+    "file-saver": "^2.0.5",
     "tinymce": "7.3.0",
     "vue": "catalog:"
   },
