--- a/packages/flow-chart/package.json
+++ b/packages/flow-chart/package.json
@@ -28,7 +28,8 @@
     "es-toolkit": "catalog:",
     "file-saver": "^2.0.5",
     "tinymce": "7.3.0",
-    "vue": "catalog:"
+    "vue": "catalog:",
+    "xe-utils": "catalog:"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "catalog:",
