--- a/packages/flow-chart/package.json
+++ b/packages/flow-chart/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@clsy/flow-chart",
   "version": "0.0.0",
-  "private": true,
   "type": "module",
   "scripts": {
     "dev": "pnpm vite --mode development",
@@ -27,6 +26,7 @@
     "element-plus": "catalog:",
     "es-toolkit": "catalog:",
     "file-saver": "^2.0.5",
+    "js-base64": "^3.7.7",
     "tinymce": "7.3.0",
     "vue": "catalog:",
     "xe-utils": "catalog:"
